# invoice-parser-app

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.streamlit  EPG_PDF_Extraherare.spec  EPG_PDF_Extraherare_CLI.spec  README.md  analyze_quantity_patterns.py  analyze_remaining_problems.py  analyze_unit_problems.py  build_installer.py  build_package.py  build_windows.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  run_api.py  run_engine.py  run_gui.py  run_streamlit.py  test_fixes.py  test_unit_fix.py
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT-COMPLETE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: app-crash-after-install.md  flow-pdfplumber-ocr-ai-vision.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-UAT.md
configs/: calibration_model.joblib
data/: corrections.json  ground_truth.json  learning.db
docs/: 02_data-model.md  04_heuristics.md  05_validation.md  06_test-corpus.md  checklist.md  deployment_windows_desktop.md  roadmap.md  tasks.md
installer/: installer.nsi
package/: README.txt  install.ps1
specs/: SPEC_ANALYSIS.md  invoice_pipeline_v1.md
src/: __init__.py  config.py  run_summary.py
tests/: __init__.py  test_ai_client.py  test_ai_policy.py  test_artifact_manifest.py  test_backward_compat.py  test_batch_runner.py  test_cli.py  test_column_detection.py  test_correction_dedup.py  test_debug_artifacts.py  test_document.py  test_excel_export.py  test_footer_extractor.py  test_header_extractor.py  test_invoice_boundary_detection.py  test_invoice_header.py  test_invoice_line_parser.py  test_number_normalizer.py  test_ocr_routing.py  test_page.py  test_pdf_detection.py  test_pdf_renderer.py  test_performance_phase22.py  test_profile_loader.py  test_quality_score.py  test_retry_extraction.py  test_review_package.py  test_review_report.py  test_row_grouping.py  test_run_summary.py  test_segment_identification.py  test_tokenizer.py  test_traceability.py  test_validation.py  test_wrap_detection.py
(+697 files in other folders)
