[project]
name = "epg-pdf-extraherare"
version = "0.1.0"
description = "EPG PDF Extraherare - PDF invoice parser med 12-stegs pipeline för strukturerad dataextraktion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
